--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "static-site",
+  "name": "readme-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Rupert St J W",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "inquirer": "^9.2.14"
   }
 }
