--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "readme-challenge",
   "version": "1.0.0",
-  "description": "",
+  "description": "A coding challenge to autocreate readme files",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^9.2.14"
-  }
+  },
+  "type": "module"
 }
