--- a/package.json
+++ b/package.json
@@ -4,12 +4,37 @@
   "description": "A coding challenge to autocreate readme files",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "lint-md": "npx markdownlint-cli md/*.md"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testEnvironment": "node",
+    "verbose": true,
+    "bail": true
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "author": "Rupert St J W",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "babel-jest": "^29.7.0",
+    "dayjs": "^1.11.10",
     "inquirer": "^8.2.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "jest": "^29.7.0",
+    "jest-date-mock": "^1.0.8",
+    "markdownlint": "^0.33.0",
+    "markdownlint-cli": "^0.39.0"
   }
 }
